--- a/.github/workflows/notion_job.yaml
+++ b/.github/workflows/notion_job.yaml
@@ -2,6 +2,7 @@
  on:
    schedule:
      - cron: "0 0 * * *"
+   workflow_dispatch: # Permite execuções manuais
  jobs:
    build:
      runs-on: ubuntu-latest
